# ubuntu-package-changelog

./: .gitignore  .travis.yml  README.rst  setup.cfg
.github/workflows/: test.yaml
snap/: snapcraft.yaml
ubuntu_package_changelog/: __init__.py
