[metadata]
name = ubuntu-package-changelog
url = https://github.com/toabctl/ubuntu-package-changelog
author = Thomas Bechtold
author_email = thomasbechtold@jpberlin.de
license = Apache-2.0
long-description = README.rst
classifiers =
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
package_dir=
  =.
packages = find:
install_requires =
  launchpadlib
  requests
setup_requires =
  setuptools_scm
  
[options.extras_require]
tests =
  flake8

[options.entry_points]
console_scripts =
  ubuntu-package-changelog = ubuntu_package_changelog:main
